@@ -1,0 +1,3 @@
+t_fmt3.o
+../fmt.a
+../str.a
