@@ -1,17 +1,21 @@
 fmt_nstr.o
 fmt_str.o
 fmt_uchar.o
+fmt_ucharb.o
 fmt_ucharo.o
 fmt_ucharx.o
 fmt_uint.o
+fmt_uintb.o
 fmt_uinto.o
 fmt_uintx.o
 fmt_ullong.o
 fmt_ullongo.o
 fmt_ullongx.o
 fmt_ulong.o
+fmt_ulongb.o
 fmt_ulongo.o
 fmt_ulongx.o
 fmt_ushort.o
+fmt_ushortb.o
 fmt_ushorto.o
 fmt_ushortx.o
