@@ -1,6 +1,8 @@
 fmt_u32.o
+fmt_u32b.o
 fmt_u32o.o
 fmt_u32x.o
 fmt_u64.o
+fmt_u64b.o
 fmt_u64o.o
 fmt_u64x.o
